# tree-sitter-supercollider

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  go.mod  grammar.js  pyproject.toml  setup.py  tree-sitter.json
bindings/go/: binding.go  binding_test.go
bindings/node/: index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_supercollider/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSupercolliderTests/: TreeSitterSupercolliderTests.swift
src/: grammar.json  node-types.json  parser.c
