[package]
name = "tree-sitter-supercollider"
description = "Supercollider grammar for tree-sitter"
version = "0.1.0"
authors = ["amit"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "supercollider"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-supercollider"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.5"
